<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:id="@+id/main"
        android:fontFamily="@font/apple_bold"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playfair"
        android:textSize="70sp"/>

    <Button
        android:id="@+id/about"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10sp"
        android:background="@drawable/round_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_playfair"
        android:textColor="@color/white"/>


    <Button

        android:padding="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main"
        app:layout_constraintBottom_toTopOf="@id/decrypt"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:id="@+id/encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:textSize="60sp" />

    <Button
        android:layout_marginBottom="10dp"
        android:padding="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/encrypt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:id="@+id/decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="@string/decrypt" />

</androidx.constraintlayout.widget.ConstraintLayout>