<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".EncryptionActivity">

    <EditText
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60sp"
        android:maxLines="1"
        android:textColorHint="@color/mediumGrey"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_textview"
        android:hint="@string/key"
        android:padding="10dp" />

    <EditText
        android:hint="@string/wordEnc"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/key"
        android:layout_marginTop="30sp"
        android:imeOptions="actionDone"
        android:focusableInTouchMode="true"
        android:maxLines="1"
        android:textColorHint="@color/mediumGrey"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:id="@+id/word"
        android:layout_below="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_textview"
        android:padding="10dp" />

    <TextView
        android:scrollHorizontally="true"
        android:text="@string/modified_key"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/word"
        android:layout_marginTop="100sp"
        android:textSize="30sp"
        android:textColor="@color/mediumGrey"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/keyText"
        android:background="@drawable/round_textview"
        android:layout_below="@id/word"
        android:padding="10dp"/>

    <TextView
        android:scrollHorizontally="true"
        android:text="@string/modified_text"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintTop_toBottomOf="@id/keyText"
        android:layout_marginTop="30sp"
        android:textSize="30sp"
        android:textColor="@color/mediumGrey"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/wordText"
        android:background="@drawable/round_textview"
        android:layout_below="@id/keyText"
        android:padding="10dp"/>

    <Button
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20sp"
        android:textColor="@color/white"
        android:background="@drawable/round_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton"
        android:layout_below="@id/wordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/next"
        android:textSize="80sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>